--- a/store/templates/index.html
+++ b/store/templates/index.html
@@ -130,8 +130,8 @@
                                 </a>
                                 <div class="product_action_box">
                                     <ul class="list_none pr_action_btn">
-                                        <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                            Add To Cart</a></li>
+                                         <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
                                                 class="icon-shuffle"></i></a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
@@ -178,8 +178,8 @@
                             </a>
                             <div class="product_action_box">
                                 <ul class="list_none pr_action_btn">
-                                    <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                        Add To Cart</a></li>
+                                    <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                     <li><a href="javascript:void(0);" class="popup-ajax"><i
                                             class="icon-shuffle"></i></a></li>
                                     <li><a href="javascript:void(0);" class="popup-ajax"><i
@@ -228,8 +228,8 @@
                             </a>
                             <div class="product_action_box">
                                 <ul class="list_none pr_action_btn">
-                                    <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                        Add To Cart</a></li>
+                                     <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                     <li><a href="javascript:void(0);" class="popup-ajax"><i
                                             class="icon-shuffle"></i></a></li>
                                     <li><a href="javascript:void(0);" class="popup-ajax"><i
@@ -276,8 +276,8 @@
                             </a>
                             <div class="product_action_box">
                                 <ul class="list_none pr_action_btn">
-                                    <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                        Add To Cart</a></li>
+                                     <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                     <li><a href="javascript:void(0);" class="popup-ajax"><i
                                             class="icon-shuffle"></i></a></li>
                                     <li><a href="javascript:void(0);" class="popup-ajax"><i
@@ -325,8 +325,8 @@
                             </a>
                             <div class="product_action_box">
                                 <ul class="list_none pr_action_btn">
-                                    <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                        Add To Cart</a></li>
+                                     <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                     <li><a href="javascript:void(0);" class="popup-ajax"><i
                                             class="icon-shuffle"></i></a></li>
                                     <li><a href="javascript:void(0);" class="popup-ajax"><i
@@ -410,8 +410,8 @@
                                 </a>
                                 <div class="product_action_box">
                                     <ul class="list_none pr_action_btn">
-                                        <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                            Add To Cart</a></li>
+                                        <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
                                                 class="icon-shuffle"></i></a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
@@ -459,8 +459,8 @@
                                 </a>
                                 <div class="product_action_box">
                                     <ul class="list_none pr_action_btn">
-                                        <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                            Add To Cart</a></li>
+                                         <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
                                                 class="icon-shuffle"></i></a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
@@ -508,8 +508,8 @@
                                 </a>
                                 <div class="product_action_box">
                                     <ul class="list_none pr_action_btn">
-                                        <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                            Add To Cart</a></li>
+                                         <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
                                                 class="icon-shuffle"></i></a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
@@ -557,8 +557,8 @@
                                 </a>
                                 <div class="product_action_box">
                                     <ul class="list_none pr_action_btn">
-                                        <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                            Add To Cart</a></li>
+                                         <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
                                                 class="icon-shuffle"></i></a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
@@ -605,8 +605,8 @@
                                 </a>
                                 <div class="product_action_box">
                                     <ul class="list_none pr_action_btn">
-                                        <li class="add-to-cart"><a href="#"><i class="icon-basket-loaded"></i>
-                                            Add To Cart</a></li>
+                                         <li class="add-to-cart"><a href="/cart"><i class="icon-basket-loaded"></i>
+														Add To Cart</a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
                                                 class="icon-shuffle"></i></a></li>
                                         <li><a href="javascript:void(0);" class="popup-ajax"><i
