--- a/store/templates/category.html
+++ b/store/templates/category.html
@@ -67,7 +67,7 @@
                             <div class="product" id="{{category.id}}">
                                 <div class="product_img"><a href="#"> <img
                                         src="{{product.image.url}}" alt="product_img1"> </a>
-                                    <div class="product_action_box">
+                                     <div class="product_action_box">
                                         <ul class="list_none pr_action_btn">
                                             <li class="add-to-cart">
                                                 <a href="#"
@@ -82,12 +82,13 @@
                                                     <!-- Add this hidden input -->
                                                 </form>
                                             </li>
-
-                                            <li><a href="javascript:void(0);" class="popup-ajax"><i
+                                            <li><a href="{% url 'add_to_compare' product.id %}" class="popup-ajax"><i
                                                     class="icon-shuffle"></i></a></li>
-                                            <li><a href="javascript:void(0);" class="popup-ajax"><i
+                                            <li><a href="{% url 'zoom_product' product.id %}" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
-                                            <li><a href="/wishlist"><i class="icon-heart"></i></a></li>
+                                            <li><a href="{% url 'add_to_wishlist' product.pk %}">
+                                                <i class="icon-heart"></i>
+                                            </a></li>
                                         </ul>
                                     </div>
                                 </div>
