--- a/store/templates/wishlist.html
+++ b/store/templates/wishlist.html
@@ -1,97 +1,83 @@
 {% extends 'base.html' %}
 {% block content %}
 
-    <div class="breadcrumb_section bg_gray page-title-mini">
-        <div class="container"><!-- STRART CONTAINER -->
-            <div class="row align-items-center">
-                <div class="col-md-6">
-                    <div class="page-title">
-                        <h1>Wishlist</h1>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <ol class="breadcrumb justify-content-md-end">
-                        <li class="breadcrumb-item"><a href="#">Home</a></li>
-                        <li class="breadcrumb-item"><a href="#">Collection</a></li>
-                        <li class="breadcrumb-item active">Wishlist</li>
-                    </ol>
+<div class="breadcrumb_section bg_gray page-title-mini">
+    <div class="container"><!-- STRART CONTAINER -->
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <div class="page-title">
+                    <h1>Wishlist</h1>
                 </div>
             </div>
-        </div><!-- END CONTAINER-->
-    </div>
-    <div class="main_content position-relative" id="bambocraft">
+            <div class="col-md-6">
+                <ol class="breadcrumb justify-content-md-end">
+                    <li class="breadcrumb-item"><a href="#">Home</a></li>
+                    <li class="breadcrumb-item"><a href="#">Collection</a></li>
+                    <li class="breadcrumb-item active">Wishlist</li>
+                </ol>
+            </div>
+        </div>
+    </div><!-- END CONTAINER-->
+</div>
+<div class="main_content position-relative" id="bambocraft">
 
-        <!-- START SECTION SHOP -->
-        <div class="section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-12">
-                        <div class="table-responsive wishlist_table">
-                            <table class="table">
-                                <thead>
-                                    <tr>
-                                        <th class="product-thumbnail">&nbsp;</th>
-                                        <th class="product-name">Product</th>
-                                        <th class="product-price">Price</th>
-                                        <th class="product-stock-status">Stock Status</th>
-                                        <th class="product-add-to-cart"></th>
-                                        <th class="product-remove">Remove</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td class="product-thumbnail"><a href="#"><img
-                                                    src="/static/assets/images/product/Hancrafted-Jute-Box-Round.jpg"
-                                                    alt="product1"></a></td>
-                                        <td class="product-name" data-title="Product"><a href="#">Hancrafted Jute</a>
-                                        </td>
-                                        <td class="product-price" data-title="Price">₹45.00</td>
-                                        <td class="product-stock-status" data-title="Stock Status"><span
-                                                class="badge rounded-pill text-bg-success">In Stock</span></td>
-                                        <td class="product-add-to-cart"><a href="#" class="btn btn-fill-out"><i
-                                                    class="icon-basket-loaded"></i> Add to Cart</a></td>
-                                        <td class="product-remove" data-title="Remove"><a href="#"><i
-                                                    class="ti-close"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="product-thumbnail"><a href="#"><img
-                                                    src="/static/assets/images/product/Hancrafted-Jute-Ganesha-Hanging.jpg"
-                                                    alt="product2"></a></td>
-                                        <td class="product-name" data-title="Product"><a href="#">Hancrafted Jute</a>
-                                        </td>
-                                        <td class="product-price" data-title="Price">₹55.00</td>
-                                        <td class="product-stock-status" data-title="Stock Status"><span
-                                                class="badge rounded-pill text-bg-success">In Stock</span></td>
-                                        <td class="product-add-to-cart"><a href="#" class="btn btn-fill-out"><i
-                                                    class="icon-basket-loaded"></i> Add to Cart</a></td>
-                                        <td class="product-remove" data-title="Remove"><a href="#"><i
-                                                    class="ti-close"></i></a></td>
-                                    </tr>
-                                    <tr>
-                                        <td class="product-thumbnail"><a href="#"><img
-                                                    src="/static/assets/images/product/Hancrafted-Jute-Owl-Set-of-2.jpg"
-                                                    alt="product3"></a></td>
-                                        <td class="product-name" data-title="Product"><a href="#">Hancrafted Jute</a>
-                                        </td>
-                                        <td class="product-price" data-title="Price">₹68.00</td>
-                                        <td class="product-stock-status" data-title="Stock Status"><span
-                                                class="badge rounded-pill text-bg-success">In Stock</span></td>
-                                        <td class="product-add-to-cart"><a href="#" class="btn btn-fill-out"><i
-                                                    class="icon-basket-loaded"></i> Add to Cart</a></td>
-                                        <td class="product-remove" data-title="Remove"><a href="#"><i
-                                                    class="ti-close"></i></a></td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
+    <!-- START SECTION SHOP -->
+    <div class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="table-responsive wishlist_table">
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th class="product-thumbnail">Product Image</th>
+                                <th class="product-name">Product</th>
+                                <th class="product-price">Price</th>
+                                <th class="product-stock-status">Stock Status</th>
+                                <th class="product-add-to-cart">Add To Cart</th>
+                                <th class="product-remove">Remove</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            {% for item in wishlist_items %}
+                            <tr>
+                                <td class="product-thumbnail"><a href="#"><img src="{{item.image.url}}"
+                                                                               alt="product"></a></td>
+                                <td class="product-name" data-title="Product"><a href="#">{{item.product_title}}</a>
+                                </td>
+                                <td class="product-price" data-title="Price">₹{{item.product_price}}</td>
+                                <td class="product-stock-status" data-title="Stock Status"><span
+                                        class="badge rounded-pill text-bg-success">In Stock</span></td>
+                                <td class="product-add-to-cart">
+                                    <a href="#" class="btn btn-fill-out"
+                                       onclick="document.getElementById('add-to-cart-form-{{ item.product.id }}').submit(); return false;">
+                                        <i class="icon-basket-loaded"></i> Add to Cart
+                                    </a>
+                                    <form id="add-to-cart-form-{{ item.product.id }}" method="POST"
+                                          action="{% url 'cart' %}" style="display:none;">
+                                        {% csrf_token %}
+                                        <input type="hidden" name="product_id" value="{{ item.product.id }}">
+                                        <input type="hidden" name="action" value="increase">
+                                    </form>
+                                </td>
+                                <td class="product-remove" data-title="Remove">
+                                    <a href="{% url 'remove_from_wishlist' item_id=item.id %}"><i class="ti-close"></i></a>
+                                </td>
+
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- END SECTION SHOP -->
-
-
     </div>
+    <!-- END SECTION SHOP -->
+
+
+</div>
 
 
 {% endblock %}
