Remodule cart strecture.....

--- a/store/templates/collection_detail.html
+++ b/store/templates/collection_detail.html
@@ -77,7 +77,7 @@
                                                     <!-- Add this hidden input -->
                                                 </form>
                                             </li>
-                                            <li><a href="{% url 'add_to_compare' product.pk %}" class="popup-ajax"><i
+                                            <li><a href="#" class="popup-ajax"><i
                                                     class="icon-shuffle"></i></a></li>
                                             <li><a href="{% url 'zoom_product' product.id %}" class="popup-ajax"><i
                                                     class="icon-magnifier-add"></i></a></li>
