Order Page complete...

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -368,6 +368,8 @@
                             </div>
                         </div>
                     </li>
+<!--                    <li><p class="dropdown-item nav-link nav_item ">Welcome to {{request.session.user}}</p>-->
+<!--                    </li>-->
                 </ul>
             </nav>
         </div>
