--- a/store/templates/blank.html
+++ b/store/templates/blank.html
@@ -1,52 +1,219 @@
- <!--                                <td>-->
-                                <!--                                    <div class="row no-gutters">-->
-                                <!--                                        <form action="{% url 'cart' %}" method="POST" class="col-2">-->
-                                <!--                                            {% csrf_token %}-->
-                                <!--                                            <input type="hidden" name="product_id" value="{{ product.id }}">-->
-                                <!--                                            <input type="hidden" name="action" value="decrement">-->
-                                <!--                                            <button type="submit" class="btn btn-secondary">-</button>-->
-                                <!--                                        </form>-->
-                                <!--                                        <div class="text-center col">-->
-                                <!--                                            {{ cart|cart_quantity:product.id }}-->
-                                <!--                                        </div>-->
-                                <!--                                        <form action="{% url 'cart' %}" method="POST" class="col-2">-->
-                                <!--                                            {% csrf_token %}-->
-                                <!--                                            <input type="hidden" name="product_id" value="{{ product.id }}">-->
-                                <!--                                            <input type="hidden" name="action" value="increment">-->
-                                <!--                                            <button type="submit" class="btn btn-secondary">+</button>-->
-                                <!--                                        </form>-->
-                                <!--                                    </div>-->
-                                <!--                                </td>-->
+{% extends 'base.html' %}
+{% load cart %}
+{% load custom_filter %}
+{% block content %}
 
- <!--                            {% if request.user.is_authenticated %}-->
+<div class="breadcrumb_section bg_gray page-title-mini">
+    <div class="container"><!-- STRART CONTAINER -->
+        <div class="row align-items-center">
+            <div class="col-md-6">
+                <div class="page-title">
+                    <h1 class="text-white">Checkout</h1>
+                </div>
+            </div>
+        </div>
+    </div><!-- END CONTAINER-->
+</div>
 
 
+<div class="main_content position-relative" id="bambocraft">
 
- <!--                            {% for item in wishlist %}-->
-                            <!--                            <tr>-->
-                            <!--                                <td class="product-thumbnail"><a href="#"><img-->
-                            <!--                                        src="{{item.product.image.url}}"-->
-                            <!--                                        alt="product"></a></td>-->
-                            <!--                                <td class="product-name" data-title="Product"><a-->
-                            <!--                                        href="#">{{item.product.product_title}}</a>-->
-                            <!--                                </td>-->
-                            <!--                                <td class="product-price" data-title="Price">₹{{item.product.product_price}}</td>-->
-                            <!--                                <td class="product-stock-status" data-title="Stock Status"><span-->
-                            <!--                                        class="badge rounded-pill text-bg-success">In Stock</span></td>-->
-                            <!--                                <td class="product-add-to-cart">-->
-                            <!--                                    <a href="#" class="btn btn-fill-out"-->
-                            <!--                                       onclick="document.getElementById('add-to-cart-form-{{ product.id }}').submit(); return false;">-->
-                            <!--                                        <i class="icon-basket-loaded"></i> Add to Cart-->
-                            <!--                                    </a>-->
-                            <!--                                    <form id="add-to-cart-form-{{ product.id }}" method="POST" action="{% url 'cart' %}"-->
-                            <!--                                          style="display:none;">-->
-                            <!--                                        {% csrf_token %}-->
-                            <!--                                        <input type="hidden" name="product_id" value="{{ product.id }}">-->
-                            <!--                                        <input type="hidden" name="action" value="increase">-->
-                            <!--                                    </form>-->
-                            <!--                                </td>-->
-                            <!--                                <td class="product-remove" data-title="Remove"><a-->
-                            <!--                                        href="{% url 'remove' item_id=item.id %}"><i class="ti-close"></i></a>-->
-                            <!--                                </td>-->
-                            <!--                            </tr>-->
-                            <!--                            {% endfor %}-->
+    <!-- START SECTION SHOP -->
+    <div class="section">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div class="toggle_info"> <span><i class="fas fa-user"></i>Returning customer? <a
+                            href="#loginform" data-bs-toggle="collapse" class="collapsed"
+                            aria-expanded="false">Click here to login</a></span></div>
+                    <div class="panel-collapse collapse login_form" id="loginform">
+                        <div class="panel-body">
+                            <p>If you have shopped with us before, please enter your details below. If you are a new
+                                customer, please proceed to the Billing &amp; Shipping section.</p>
+                            <form method="post">
+                                {% csrf_token %}
+                                <div class="form-group mb-3"><input type="text" required="" class="form-control"
+                                                                    name="email" placeholder="Username Or Email"></div>
+                                <div class="form-group mb-3"><input class="form-control" required=""
+                                                                    type="password" name="password"
+                                                                    placeholder="Password"></div>
+                                <div class="login_footer form-group mb-3">
+                                    <div class="chek-form">
+                                        <div class="custome-checkbox"><input class="form-check-input"
+                                                                             type="checkbox" name="checkbox"
+                                                                             id="remember" value=""> <label
+                                                class="form-check-label" for="remember"><span>Remember
+														me</span></label></div>
+                                    </div>
+                                    <a href="#">Forgot password?</a>
+                                </div>
+                                <div class="form-group mb-3">
+                                    <button type="submit"
+                                            class="btn btn-fill-out btn-block" name="login">Log in
+                                    </button>
+                                </div>
+                            </form>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="toggle_info"> <span><i class="fas fa-tag"></i>Have a coupon? <a href="#coupon"
+                                                                                                data-bs-toggle="collapse"
+                                                                                                class="collapsed"
+                                                                                                aria-expanded="false">Click here to
+									enter your code</a></span></div>
+                    <div class="panel-collapse collapse coupon_form" id="coupon">
+                        <div class="panel-body">
+                            <p>If you have a coupon code, please apply it below.</p>
+                            <div class="coupon field_form input-group"><input type="text" value=""
+                                                                              class="form-control"
+                                                                              placeholder="Enter Coupon Code..">
+                                <div class="input-group-append">
+                                    <button class="btn btn-fill-out btn-sm"
+                                            type="submit">Apply Coupon
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <div class="medium_divider"></div>
+                    <div class="divider center_icon"><i class="linearicons-credit-card"></i></div>
+                    <div class="medium_divider"></div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="heading_s1">
+                        <h4>Billing Details</h4>
+                    </div>
+                    <form method="post" action="{% url 'checkout' %}">
+                        {% csrf_token %}
+                        <div class="form-group mb-3"><input type="text" required="" class="form-control"
+                                                            name="fname" placeholder="First name *"></div>
+                        <div class="form-group mb-3"><input type="text" required="" class="form-control"
+                                                            name="lname" placeholder="Last name *"></div>
+<!--                        <div class="form-group mb-3"><input class="form-control" required="" type="text"-->
+<!--                                                            name="cname" placeholder="Company Name"></div>-->
+                        <div class="form-group mb-3"><input type="text" class="form-control"
+                                                            name="billing_address" required=""
+                                                            placeholder="Address line"></div>
+                        <div class="form-group mb-3"><input class="form-control" required="" type="text"
+                                                            name="city" placeholder="City / Town *"></div>
+                        <div class="form-group mb-3"><input class="form-control" required="" type="text"
+                                                            name="country" placeholder="State / County *"></div>
+                        <div class="form-group mb-3"><input class="form-control" required="" type="text"
+                                                            name="zipcode" placeholder="Postcode / ZIP *"></div>
+<!--                        <div class="form-group mb-3"><input class="form-control" required="" type="text"-->
+<!--                                                            name="phone" placeholder="Phone *"></div>-->
+                        <div class="form-group mb-3"><input class="form-control" required="" type="text"
+                                                            name="email" placeholder="Email address *"></div>
+                        <div class="form-group mb-3">
+                            <div class="chek-form">
+                                <div class="custome-checkbox"><input class="form-check-input" type="checkbox"
+                                                                     name="checkbox" id="createaccount"> <label
+                                        class="form-check-label label_info" for="createaccount"><span>Create an
+												account?</span></label></div>
+                            </div>
+                        </div>
+                        <div class="heading_s1">
+                            <h4>Additional information</h4>
+                        </div>
+                        <div class="form-group mb-0">
+                            <textarea rows="5" class="form-control" placeholder="Order notes"
+                                      name="order_notes"></textarea>
+                        </div>
+                        <div class="form-group mb-3">
+                            <button type="submit" class="btn btn-fill-out btn-block">Place Order</button>
+                        </div>
+                    </form>
+                </div>
+                <div class="col-md-6">
+                    <div class="order_review">
+                        <div class="heading_s1">
+                            <h4>Your Orders</h4>
+                        </div>
+                        <div class="table-responsive order_table">
+                            <table class="table">
+                                <thead>
+                                <tr>
+                                    <th>Product</th>
+                                    <th>Total</th>
+                                </tr>
+                                </thead>
+                                <tbody>
+                                {% for product in products %}
+                                <tr>
+                                    <td>{{product.product_title}} <span class="product-qty">{{product|cart_quantity:request.session.cart}}</span>
+                                    </td>
+                                    <td>{{product.product_price|currency}}</td>
+                                </tr>
+                                {% endfor %}
+                                </tbody>
+                                <tfoot>
+                                <tr>
+                                    <th>SubTotal</th>
+                                    <td class="product-subtotal">
+                                        {{products|total_cart_price:request.session.cart|currency}}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <th>Shipping</th>
+                                    <td>Free Shipping</td>
+                                </tr>
+                                <tr>
+                                    <th>Total</th>
+                                    <td class="product-subtotal">
+                                        {{products|total_cart_price:request.session.cart|currency}}
+                                    </td>
+                                </tr>
+                                </tfoot>
+                            </table>
+                        </div>
+                        <div class="payment_method">
+                            <div class="heading_s1">
+                                <h4>Payment</h4>
+                            </div>
+                            <div class="payment_option">
+                                <div class="custome-radio"><input class="form-check-input" required="" type="radio"
+                                                                  name="payment_option" id="exampleRadios3"
+                                                                  value="option3" checked=""> <label
+                                        class="form-check-label" for="exampleRadios3">Direct Bank Transfer</label>
+                                    <p data-method="option3" class="payment-text">There are many variations of
+                                        passages of Lorem Ipsum available, but the majority have suffered
+                                        alteration. </p>
+                                </div>
+                                <div class="custome-radio"><input class="form-check-input" type="radio"
+                                                                  name="payment_option" id="exampleRadios4"
+                                                                  value="option4"> <label
+                                        class="form-check-label" for="exampleRadios4">Check Payment</label>
+                                    <p data-method="option4" class="payment-text">Please send your cheque to Store
+                                        Name, Store Street, Store Town, Store State / County, Store Postcode.</p>
+                                </div>
+                                <div class="custome-radio"><input class="form-check-input" type="radio"
+                                                                  name="payment_option" id="exampleRadios5"
+                                                                  value="option5"> <label
+                                        class="form-check-label" for="exampleRadios5">Paypal</label>
+                                    <p data-method="option5" class="payment-text">Pay via PayPal; you can pay with
+                                        your credit card if you don't have a PayPal account.</p>
+                                </div>
+                            </div>
+                        </div>
+<!--                        <form method="post" action="{% url 'checkout' %}">-->
+<!--                        {% csrf_token %}-->
+<!--                        <button type="submit" class="btn btn-fill-out btn-block">Place Order</button>-->
+<!--                        </form>-->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- END SECTION SHOP -->
+
+
+</div>
+
+{% endblock %}
