Order Page complete...

--- a/store/templates/base.html
+++ b/store/templates/base.html
@@ -364,6 +364,7 @@
                                 <p class="cart_buttons"><a href="/cart"
                                                            class="btn btn-fill-line rounded-0 view-cart">View Cart</a><a
                                         href="/checkout" class="btn btn-fill-out rounded-0 checkout">Checkout</a>
+<!--                                    {% url 'account' %}?next={% url 'checkout' %}-->
                                 </p>
                             </div>
                         </div>
