--- a/store/templates/compare.html
+++ b/store/templates/compare.html
@@ -41,7 +41,7 @@
                                 <tr class="pr_title">
                                     <td class="row_title">Product Name</td>
                                     <td class="product_name"><a
-                                            href="product-detail.html">{{product.product_detail}}</a>
+                                            href="product-detail.html">{{product.product_title}}</a>
                                     </td>
                                 </tr>
                                 <tr class="pr_price">
